--- a/web.yaml
+++ b/web.yaml
@@ -3,7 +3,7 @@
     - name: install httpd
       package: name=httpd state=installed
     - name: configure
-      shell: "echo Welcome to MAHESH Server - v2 > /var/www/html/index.html"
+      shell: "echo Welcome to MAHESH Server - V3 > /var/www/html/index.html"
     - name: start service
       service: name=httpd state=started
     - name: add user
